# places-status-indicator-applet-for-cosmic

./: Cargo.toml  README.md  justfile
data/: dev.dominiccgeh.CosmicAppletPlacesStatusIndicator.desktop
src/: config.rs  main.rs  window.rs
