[package]
name = "cosmic-applet-places-status-indicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic", version = "0.1.0", default-features = false, features = ["applet", "tokio", "wayland", "process"] }
once_cell = "1.19.0"
paste = "1.0.14"
rust-embed = "8.3.0"
serde = "1.0.197"
